@@ -19,15 +19,12 @@ package io.spring.start.site.extension.dependency.testcontainers;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 import io.spring.initializr.generator.buildsystem.Build;
 import io.spring.initializr.generator.buildsystem.Dependency;
 import io.spring.initializr.generator.buildsystem.DependencyScope;
 import io.spring.initializr.generator.spring.documentation.HelpDocument;
 import io.spring.initializr.generator.version.Version;
-import io.spring.initializr.generator.version.VersionParser;
-import io.spring.initializr.generator.version.VersionRange;
 import io.spring.start.site.support.implicit.ImplicitDependency;
 import io.spring.start.site.support.implicit.ImplicitDependency.Builder;
 
@@ -40,16 +37,12 @@ import io.spring.start.site.support.implicit.ImplicitDependency.Builder;
  */
 abstract class TestcontainersModuleRegistry {
 
-	private static final VersionRange SPRING_BOOT_3_3_0_M2_OR_LATER = VersionParser.DEFAULT.parseRange("3.3.0-M2");
-
 	static Iterable<ImplicitDependency> create(Version platformVersion) {
 		List<ImplicitDependency.Builder> builders = new ArrayList<>();
-		if (SPRING_BOOT_3_3_0_M2_OR_LATER.match(platformVersion)) {
-			builders.add(onDependencies("activemq").customizeBuild(addModule("activemq"))
-				.customizeHelpDocument(addReferenceLink("ActiveMQ Module", "activemq/")));
-			builders.add(onDependencies("artemis").customizeBuild(addModule("activemq"))
-				.customizeHelpDocument(addReferenceLink("ActiveMQ Module", "activemq/")));
-		}
+		builders.add(onDependencies("activemq").customizeBuild(addModule("activemq"))
+			.customizeHelpDocument(addReferenceLink("ActiveMQ Module", "activemq/")));
+		builders.add(onDependencies("artemis").customizeBuild(addModule("activemq"))
+			.customizeHelpDocument(addReferenceLink("ActiveMQ Module", "activemq/")));
 		builders.add(onDependencies("amqp", "amqp-streams").customizeBuild(addModule("rabbitmq"))
 			.customizeHelpDocument(addReferenceLink("RabbitMQ Module", "rabbitmq/")));
 		builders.add(onDependencies("cloud-gcp", "cloud-gcp-pubsub").customizeBuild(addModule("gcloud"))
@@ -58,11 +51,13 @@ abstract class TestcontainersModuleRegistry {
 			.customizeHelpDocument(addReferenceLink("Consul Module", "consul/")));
 		builders.add(onDependencies("cloud-starter-vault-config").customizeBuild(addModule("vault"))
 			.customizeHelpDocument(addReferenceLink("Vault Module", "vault/")));
-		builders.add(onDependencies("data-cassandra", "data-cassandra-reactive").customizeBuild(addModule("cassandra"))
+		builders.add(onDependencies("data-cassandra", "data-cassandra-reactive", "spring-ai-vectordb-cassandra")
+			.customizeBuild(addModule("cassandra"))
 			.customizeHelpDocument(addReferenceLink("Cassandra Module", "databases/cassandra/")));
 		builders.add(onDependencies("data-couchbase", "data-couchbase-reactive").customizeBuild(addModule("couchbase"))
 			.customizeHelpDocument(addReferenceLink("Couchbase Module", "databases/couchbase/")));
-		builders.add(onDependencies("data-elasticsearch").customizeBuild(addModule("elasticsearch"))
+		builders.add(onDependencies("data-elasticsearch", "spring-ai-vectordb-elasticsearch")
+			.customizeBuild(addModule("elasticsearch"))
 			.customizeHelpDocument(addReferenceLink("Elasticsearch Container", "elasticsearch/")));
 		builders.add(onDependencies("data-mongodb", "data-mongodb-reactive").customizeBuild(addModule("mongodb"))
 			.customizeHelpDocument(addReferenceLink("MongoDB Module", "databases/mongodb/")));
@@ -78,7 +73,7 @@ abstract class TestcontainersModuleRegistry {
 			.customizeHelpDocument(addReferenceLink("MariaDB Module", "databases/mariadb/")));
 		builders.add(onDependencies("mysql").customizeBuild(addModule("mysql"))
 			.customizeHelpDocument(addReferenceLink("MySQL Module", "databases/mysql/")));
-		builders.add(onDependencies("oracle").customizeBuild(addModule("oracle-free"))
+		builders.add(onDependencies("oracle", "spring-ai-vectordb-oracle").customizeBuild(addModule("oracle-free"))
 			.customizeHelpDocument(addReferenceLink("Oracle-Free Module", "databases/oraclefree/")));
 		builders.add(onDependencies("postgresql", "spring-ai-vectordb-pgvector").customizeBuild(addModule("postgresql"))
 			.customizeHelpDocument(addReferenceLink("Postgres Module", "databases/postgres/")));
@@ -88,7 +83,17 @@ abstract class TestcontainersModuleRegistry {
 			.customizeHelpDocument(addReferenceLink("Solace Module", "solace/")));
 		builders.add(onDependencies("sqlserver").customizeBuild(addModule("mssqlserver"))
 			.customizeHelpDocument(addReferenceLink("MS SQL Server Module", "databases/mssqlserver/")));
-		return builders.stream().map(Builder::build).collect(Collectors.toList());
+		builders.add(onDependencies("spring-ai-vectordb-chroma").customizeBuild(addModule("chromadb"))
+			.customizeHelpDocument(addReferenceLink("Chroma Module", "testcontainers/")));
+		builders.add(onDependencies("spring-ai-vectordb-milvus").customizeBuild(addModule("milvus"))
+			.customizeHelpDocument(addReferenceLink("Milvus Module", "testcontainers/")));
+		builders.add(onDependencies("spring-ai-ollama").customizeBuild(addModule("ollama"))
+			.customizeHelpDocument(addReferenceLink("Ollama Module", "testcontainers/")));
+		builders.add(onDependencies("spring-ai-vectordb-qdrant").customizeBuild(addModule("qdrant"))
+			.customizeHelpDocument(addReferenceLink("Qdrant Module", "testcontainers/")));
+		builders.add(onDependencies("spring-ai-vectordb-weaviate").customizeBuild(addModule("weaviate"))
+			.customizeHelpDocument(addReferenceLink("Weaviate Module", "testcontainers/")));
+		return builders.stream().map(Builder::build).toList();
 	}
 
 	private static ImplicitDependency.Builder onDependencies(String... dependencyIds) {
